--- a/common/assets/scss/application.scss
+++ b/common/assets/scss/application.scss
@@ -9,6 +9,7 @@ $moj-assets-path: "@ministryofjustice/frontend/moj/assets/";
 
 $govuk-page-width: 1170px;
 $moj-page-width: 1170px;
+$moj-fonts-path: "../fonts/inter/";
 
 $govuk-grid-widths: (
   one-quarter: 25%,
@@ -24,45 +25,8 @@ $govuk-grid-widths: (
 );
 
 // Import GOV.UK Frontend
-@import "govuk-frontend/dist/govuk/base";
-
-@import "govuk-frontend/dist/govuk/core/all";
-@import "govuk-frontend/dist/govuk/objects/all";
-
-@import "govuk-frontend/dist/govuk/components/back-link/index";
-@import "govuk-frontend/dist/govuk/components/breadcrumbs/index";
-@import "govuk-frontend/dist/govuk/components/button/index";
-@import "govuk-frontend/dist/govuk/components/checkboxes/index";
-@import "govuk-frontend/dist/govuk/components/cookie-banner/index";
-@import "govuk-frontend/dist/govuk/components/date-input/index";
-@import "govuk-frontend/dist/govuk/components/details/index";
-@import "govuk-frontend/dist/govuk/components/error-summary/index";
-@import "govuk-frontend/dist/govuk/components/footer/index";
-@import "govuk-frontend/dist/govuk/components/input/index";
-@import "govuk-frontend/dist/govuk/components/inset-text/index";
-@import "govuk-frontend/dist/govuk/components/notification-banner/index";
-@import "govuk-frontend/dist/govuk/components/panel/index";
-@import "govuk-frontend/dist/govuk/components/radios/index";
-@import "govuk-frontend/dist/govuk/components/select/index";
-@import "govuk-frontend/dist/govuk/components/skip-link/index";
-@import "govuk-frontend/dist/govuk/components/summary-list/index";
-@import "govuk-frontend/dist/govuk/components/table/index";
-@import "govuk-frontend/dist/govuk/components/tabs/index";
-@import "govuk-frontend/dist/govuk/components/tag/index";
-@import "govuk-frontend/dist/govuk/components/textarea/index";
-@import "govuk-frontend/dist/govuk/components/warning-text/index";
-
-@import "govuk-frontend/dist/govuk/utilities/all";
-@import "govuk-frontend/dist/govuk/overrides/all";
-
+@import "govuk-frontend/dist/govuk/index";
 // Import MoJ Frontend Components
-@import "@ministryofjustice/frontend/moj/settings/all";
-@import "@ministryofjustice/frontend/moj/objects/all";
-@import "@ministryofjustice/frontend/moj/components/organisation-switcher/organisation-switcher";
-@import "@ministryofjustice/frontend/moj/components/primary-navigation/primary-navigation";
-@import "@ministryofjustice/frontend/moj/components/badge/badge";
-@import "@ministryofjustice/frontend/moj/components/filter/filter";
-@import "@ministryofjustice/frontend/moj/components/date-picker/date-picker";
 @import "@ministryofjustice/frontend/moj/all";
 
 // Import HMRC Frontend Components
