fix: MAP-2377 Update special vehicle interrupt text

--- a/app/move/app/new/views/special-vehicle-interrupt.njk
+++ b/app/move/app/new/views/special-vehicle-interrupt.njk
@@ -22,8 +22,8 @@
    }
  }) -%}
 
-   <p> A special vehicle will be requested as you have indicated that the person travelling is pregnant and/or requires a wheelchair.</p>
-   <p>If this is incorrect, <a href="{{ backLink }}" class="govuk-link govuk-link--inverse">go back</a> and correct the provided health information.</p>
+   <p>As the person who is travelling is pregnant or requires a wheelchair, a special vehicle will be requested.</p>
+   <p>If the person is not pregnant or does not require a wheelchair, you can <a href="{{ backLink }}" class="govuk-link govuk-link--inverse">go back</a> and change their health information.</p>
 
  {%- endcall %}
 {% endblock  %}
