Revert "feat: MAP-2008 Add new move cancellation reasons (#3298)"
This reverts commit ac3214a60163f975e65490c21b63160996c933c6.

--- a/app/move/app/cancel/cancel.njk
+++ b/app/move/app/cancel/cancel.njk
@@ -17,10 +17,12 @@
   {{ super() }}
 {% endblock %}
 
-{% block beforeFields %}
+{% block formActions %}
   {% if move.status != "proposed" %}
     {{ govukWarningText({
-      html: t("moves::cancel.warning"),
+      html: t("moves::cancel.warning", {
+        name: move.profile.person._fullname
+      }),
       iconFallbackText: "Warning"
     }) }}
   {% endif %}
